fix stream margin on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,7 +126,7 @@ p a:link {
     padding: 0 1em;
   }
   .player > div {
-    margin: 0;
+    margin: 1em auto;
     width: 100%;
   }
 }
